AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src
AM_CXXFLAGS = -Wall -Wextra

noinst_LTLIBRARIES =

noinst_LTLIBRARIES += libfile_watcher.la
libfile_watcher_la_SOURCES = file_watcher.h
libfile_watcher_la_SOURCES += file_watcher_impl.h
libfile_watcher_la_SOURCES += file_watcher.cc
libfile_watcher_la_SOURCES += file_watcher_linux.h
libfile_watcher_la_SOURCES += file_watcher_linux.cc
